--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "mongodb": "^3.6.6",
     "pug": "^3.0.2"
   }
 }
